[gd_scene load_steps=2 format=3 uid="uid://dl3l3hopu3gr6"]

[ext_resource type="Script" path="res://Menu/level_selection.gd" id="1_nrgkq"]

[node name="Leve_Selection" type="Node2D"]
script = ExtResource("1_nrgkq")

[node name="Arena" type="Button" parent="."]
offset_left = 320.0
offset_top = 64.0
offset_right = 386.0
offset_bottom = 128.0
toggle_mode = true
text = "Arena"

[node name="Mobspawn" type="Button" parent="."]
offset_left = 448.0
offset_top = 64.0
offset_right = 514.0
offset_bottom = 128.0
toggle_mode = true
text = "Mobs"

[node name="Back" type="Button" parent="."]
offset_left = 320.0
offset_top = 544.0
offset_right = 896.0
offset_bottom = 576.0
text = "Back"

[connection signal="pressed" from="Arena" to="." method="_on_arena_pressed"]
[connection signal="pressed" from="Mobspawn" to="." method="_on_mobspawn_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
